k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-monitor
  labels:
    name: uptime-monitor
    app: uptime-monitor
